fix hw10: dublicate values in search's inputs & set nowrap menu's li

--- a/src/ex10_html-css-fundamentals-part2/task-04.css
+++ b/src/ex10_html-css-fundamentals-part2/task-04.css
@@ -32,7 +32,7 @@ header {
 }
 .logo-and-contacts {
     position: relative;
-    width: 85%;
+    width: 90%;
     margin: 40px 10% 40px 10%;
 }
 .logo-image {
@@ -45,7 +45,7 @@ header {
 .contacts {
     position: absolute;
     bottom: 0;
-    right: 1%;
+    right: 4%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,6 +116,7 @@ nav {
 }
 .menu li{
     display: flex;
+    white-space: nowrap;
     height: 100%;
     justify-content: space-between;
     flex-direction: column;
@@ -157,10 +158,12 @@ li :hover + .arrow {
     padding-bottom: 10px;
     display: flex;
     align-items: center;
+    
 }
 .search input {
     font-family: "Open Sans Light";
     font-size: 0.9rem;
+    width: 110px;
     padding-left: 10px;
     outline: none;
     border: none;
@@ -305,7 +308,7 @@ h2 {
 footer {
     height: 250px;
 }
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
     .logo-and-contacts,nav,.slider {
         display: none;
     }
